--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Requirements
 [  ] $() Select by Element, ID AND Class 
 [  ] Use Three Different jQuery Methods 
 [  ] Add Five CSS Declarations
-[  ] Include Three Images
+[ yes ] Include Three Images
 
 Select ONE Additional 
 [ no ] Feature 1 - Use .addClass() method
@@ -30,31 +30,51 @@ Select ONE Additional
       <li>
         <h3 id="mem1">Memory #1</h3>
         <p>More about this memory.</p>
+        <img
+        id="bvi"
+        src="https://cdn.glitch.global/4fc03ae1-fcab-4df3-956e-3520bead4d96/IMG_6543.jpeg?v=1745509421840"
+        style="display: none" 
+        width="200"/>
+        
       </li>
 
       <li>
         <h3 id="mem2">Memory #2</h3>
         <p>More about this memory.</p>
+        <img
+        id="concert"
+        src="https://cdn.glitch.global/4fc03ae1-fcab-4df3-956e-3520bead4d96/IMG_6065.jpeg?v=1745509553448"
+        style="display: none" 
+        width="200"/>
       </li>
 
       <li>
         <h3 id="mem3">Memory #3</h3>
         <p>More about this memory</p>
+         <img
+        id="bahamas"
+        src="https://cdn.glitch.global/4fc03ae1-fcab-4df3-956e-3520bead4d96/IMG_6432.jpeg?v=1745594261354"
+        style="display: none" 
+        width="200"/>
       </li>
+      
     </ol>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script>
       $("#mem1-button").click(function () {
         $("#mem1").css("color", "purple");
+        $("#bvi").show(3000);
       });
 
       $("#mem2-button").click(function () {
         $("#mem2").css("color", "blue");
+         $("#concert").show(3000);
       });
 
       $("#mem3-button").click(function () {
         $("#mem3").css("color", "green");
+        $("bahamas").show(3000);
       });
     </script>
   </body>
